feat: modified LifeSchool docs
