# app/Http/Controllers/Api/LifeSchoolController.php
@@ -11,70 +11,56 @@ use Illuminate\Http\Request;
 class LifeSchoolController extends Controller
 {
     /**
-    * @OA\Get(
-    *      path="/life_school",
-    *      operationId="getLifeSchool",
-    *      tags={"Life school"},
-    *      summary="Iegūst visus life school, tikai pēc gender",
-    *      description="Iegūst visas dzīves skolas rakstus, bet atgriežot dzīves skolas tiek filtrētas pēc lietotāja dzimuma",
-    *      @OA\Response(
-    *          response=200,
-    *          description="Successful operation",
-    *      ),
-    *      @OA\Response(
-    *          response=400,
-    *          description="Unauthenticated",
-    *      )
-    *)
-    */
+     * @OA\Get(
+     *      path="/life_school",
+     *      operationId="getLifeSchool",
+     *      tags={"Life school"},
+     *      summary="Iegūst visus life school, tikai pēc gender",
+     *      description="Iegūst visas dzīves skolas rakstus, bet atgriežot dzīves skolas tiek filtrētas pēc lietotāja dzimuma",
+     *      security={{ "bearer": {} }},
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/LifeSchoolResource")
+     *      ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Unauthenticated",
+     *      )
+     *)
+     */
     public function index()
     {
         return LifeSchoolResource::collection(LifeSchool::where('gender', auth()->user()->gender)->get());
     }
     /**
-    * @OA\Post(
-    *      path="/life_school",
-    *      operationId="postLifeSchool",
-    *      tags={"Life school"},
-    *      summary="Izveido jaunu ierakstu par life school",
-    *      description="Izveido jaunu ierakstu life school",
-    *      @OA\Parameter(
-    *          name="title",
-    *          description="Virsrakts dzīves skolai",
-    *          required=true,
-    *          in="path",
-    *          @OA\Schema(
-    *              type="string"
-    *          )
-    *      ),
-    *      @OA\Parameter(
-    *          name="gender",
-    *          description="Dzimums kam domāts šī dzīves skola",
-    *          required=true,
-    *          in="path",
-    *          @OA\Schema(
-    *              type="boolean"
-    *          )
-    *      ),
-    *      @OA\Parameter(
-    *          name="description",
-    *          description="Dzīves skolas apraksts",
-    *          required=true,
-    *          in="path",
-    *          @OA\Schema(
-    *              type="string"
-    *          )
-    *      ),
-    *      @OA\Response(
-    *          response=200,
-    *          description="Successful operation",
-    *      ),
-    *      @OA\Response(
-    *          response=400,
-    *          description="Nevar noteikt dzimumu.",
-    *      )
-    *)
-    */
+     * @OA\Post(
+     *      path="/life_school",
+     *      operationId="postLifeSchool",
+     *      tags={"Life school"},
+     *      summary="Izveido jaunu ierakstu par life school",
+     *      description="Izveido jaunu ierakstu life school",
+     *      security={{ "bearer": {} }},
+     *      @OA\RequestBody(
+     *          @OA\MediaType(
+     *              mediaType="application/x-www-form-urlencoded",
+     *              @OA\Schema(
+     *                  type="object",
+     *                  ref="#components/schemas/LifeSchoolRequest",
+     *              )
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent()
+     *      ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Nevar noteikt dzimumu.",
+     *      )
+     *)
+     */
     public function store(LifeSchoolRequest $request)
     {
         if ($request['gender'] <= -1 || $request['gender'] >= 2) {
@@ -89,22 +75,33 @@ class LifeSchoolController extends Controller
     }
 
     /**
-    * @OA\Get(
-    *      path="/life_school/{id}",
-    *      operationId="getLifeSchoolById",
-    *      tags={"Life school"},
-    *      summary="Atgriež dzīves skolas rakstu pēc id",
-    *      description="Atgriež dzīves skolas rakstu pēc id",
-    *      @OA\Response(
-    *          response=200,
-    *          description="Successful operation",
-    *      ),
-    *      @OA\Response(
-    *          response=400,
-    *          description="Nedrīkst skatīt cita dzimuma dzīves skolu",
-    *      ),
-    * )
-    */
+     * @OA\Get(
+     *      path="/life_school/{id}",
+     *      operationId="getLifeSchoolById",
+     *      tags={"Life school"},
+     *      summary="Atgriež dzīves skolas rakstu pēc id",
+     *      description="Atgriež dzīves skolas rakstu pēc id",
+     *      security={{ "bearer": {} }},
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Application id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer",
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent()
+     *      ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Nedrīkst skatīt cita dzimuma dzīves skolu",
+     *      ),
+     * )
+     */
     public function show(LifeSchool $lifeSchool)
     {
         if ($lifeSchool['gender'] != auth()->user()->gender) {
@@ -119,49 +116,41 @@ class LifeSchoolController extends Controller
     }
 
     /**
-    * @OA\Put(
-    *      path="/life_school/{id}",
-    *      operationId="updateLifeSchool",
-    *      tags={"Life school"},
-    *      summary="Atjaunina datus dzīves skolai",
-    *      description="Atjauno datus dzīves skolai pēc ievadītā id iekš uri",
-    *      @OA\Parameter(
-    *          name="title",
-    *          description="Virsrakts dzīves skolai",
-    *          required=false,
-    *          in="path",
-    *          @OA\Schema(
-    *              type="string"
-    *          )
-    *      ),
-    *      @OA\Parameter(
-    *          name="gender",
-    *          description="Dzimums kam domāts šis dzīves skolas raksts, true - sieviete, false - vīrietis",
-    *          required=false,
-    *          in="path",
-    *          @OA\Schema(
-    *              type="boolean"
-    *          )
-    *      ),
-    *      @OA\Parameter(
-    *          name="description",
-    *          description="Dzīves skolas apraksts",
-    *          required=false,
-    *          in="path",
-    *          @OA\Schema(
-    *              type="string"
-    *          )
-    *      ),
-    *      @OA\Response(
-    *          response=200,
-    *          description="Successful operation",
-    *      ),
-    *      @OA\Response(
-    *          response=400,
-    *          description="Unauthenticated",
-    *      ),
-    *)
-    */
+     * @OA\Put(
+     *      path="/life_school/{id}",
+     *      operationId="updateLifeSchool",
+     *      tags={"Life school"},
+     *      summary="Atjaunina datus dzīves skolai",
+     *      description="Atjauno datus dzīves skolai pēc ievadītā id iekš uri",
+     *      @OA\RequestBody(
+     *          @OA\MediaType(
+     *              mediaType="application/x-www-form-urlencoded",
+     *              @OA\Parameter(
+     *                  name="id",
+     *                  description="Application id",
+     *                  required=true,
+     *                  in="path",
+     *                  @OA\Schema(
+     *                      type="integer",
+     *                  )
+     *              ),
+     *              @OA\Schema(
+     *                  type="object",
+     *                  ref="#components/schemas/LifeSchoolRequest"
+     *              )
+     *          ),
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent()
+     *      ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Unauthenticated",
+     *      ),
+     *)
+     */
     public function update(LifeSchoolRequest $request, LifeSchool $lifeSchool)
     {
         $lifeSchool->update($request->validated());
@@ -169,22 +158,32 @@ class LifeSchoolController extends Controller
     }
 
     /**
-    * @OA\Delete(
-    *      path="/life_school/{id}",
-    *      operationId="deleteLifeSchool",
-    *      tags={"Life school"},
-    *      summary="Izdzēš ārā dzīves skolas rakstu",
-    *      description="Dzēš ārā dzīves skolas rakstu pēc id",
-    *      @OA\Response(
-    *          response=200,
-    *          description="Successful operation",
-    *      ),
-    *      @OA\Response(
-    *          response=400,
-    *          description="Unauthenticated",
-    *      ),
-    * )
-    */
+     * @OA\Delete(
+     *      path="/life_school/{id}",
+     *      operationId="deleteLifeSchool",
+     *      tags={"Life school"},
+     *      summary="Izdzēš ārā dzīves skolas rakstu",
+     *      description="Dzēš ārā dzīves skolas rakstu pēc id",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Application id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer",
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent()
+     *      ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Unauthenticated",
+     *      ),
+     * )
+     */
     public function destroy(LifeSchool $lifeSchool)
     {
         $lifeSchool->delete();
